fixed font weight thats darker on firefox for headings

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,12 @@
     box-sizing: border-box;
     font-family: 'Ysabeau', sans-serif;
 }
+h1, h2 {
+    font-weight: lighter;
+}
+h3 {
+    font-weight: 400;
+}
 
 a{
     text-decoration: none;
